# sap-rfc-plugin

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json
docs/reference/: sapscript-itf-format.md
plugins/sap-rfc/: requirements-dev.txt  requirements.txt
plugins/sap-rfc/.claude-plugin/: plugin.json
plugins/sap-rfc/server/: requirements.txt  server.py
plugins/sap-rfc/servers/adt-mcp/: README.md  adt_client.py  discovery.py  errors.py  server.py
plugins/sap-rfc/servers/adt-mcp/tests/: conftest.py  test_activate.py  test_adt_client.py  test_code_inspector.py  test_create_class.py  test_errors.py  (+8 more)
plugins/sap-rfc/servers/rfc-mcp/: README.md  cache.py  connection.py  pyproject.toml  server.py  timeout.py  where_clause.py
plugins/sap-rfc/servers/rfc-mcp/tests/: test_cache.py  test_sapscript.py  test_source_write.py  test_syntax.py  test_test_run.py  test_text_pool.py  test_timeout.py  test_where_clause.py
plugins/sap-rfc/servers/rfc-mcp/tests/fixtures/sapscript/: J_2GLP_DASD.FOR  J_2GLP_DASD.outline.expected.txt  fixture_bad_head.FOR  fixture_dialect_a.itf
plugins/sap-rfc/servers/rfc-mcp/tools/: ddic.py  fm.py  sapscript.py  sapscript_html.py  source.py  source_write.py  syntax.py  system.py  test_run.py  text_pool.py
plugins/sap-rfc/skills/: _keyring_shared.py
plugins/sap-rfc/skills/sap-change-connection/: README.md  SKILL.md
plugins/sap-rfc/skills/sap-connect/: README.md  SKILL.md  connect.py  sap_logon_dialog.py  sap_password_dialog.py
plugins/sap-rfc/skills/sap-disconnect/: README.md  SKILL.md  disconnect.py
(+10 files in other folders)
