[project]
name = "rfc-mcp"
version = "0.0.1"
description = "MCP server exposing SAP RFC read tools (pyrfc + keyring)"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0",
  "pyrfc",
  "keyring",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
